v2/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: v2

spec:
  replicas: 1

  selector:
    matchLabels:
      app: v2

  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
      - name: v2
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
