v2/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: v2-service 

spec:
  type: ClusterIP
  
  selector:
    app: v2
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
